added link for temple site

--- a/wdd230/index.html
+++ b/wdd230/index.html
@@ -36,6 +36,7 @@
                 <li>Step 09: <a href="./chamber/html/directory.html">The Business Directory Page</a></li>
                 <li>Step 10: <a href="./chamber/">Using the Weather API</a></li>
                 <li>Step 11: <a href="./chamber/html/contact.html">The Chamber of Commerce Site</a></li>
+                <li>Step 11: <a href="./tis/TempleInnandSuites.html">The Temple Site</a></li>
             </ul>
         </nav>
         <p>Some Lessons may need more than one activity/assignment link.</p>
